# tree-sitter-mm0

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mm0.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mm0/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMM0/: mm0.h
bindings/swift/TreeSitterMM0Tests/: TreeSitterMM0Tests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
